feat: Phase 1 — Limits and Basic Convergence (7 pages)

--- a/index.html
+++ b/index.html
@@ -60,25 +60,33 @@
 <p><em>Archimedes wanted to compute the area of a circle. He trapped it between polygons with more and more sides. The area is what the polygon areas "approach." But what does "approach" mean, precisely?</em></p>
 
 <ul class="index-list">
-  <li style="opacity: 0.4;">
-    <span style="color: var(--accent);">1. Completeness of $\mathbb{R}$</span>
-    <div class="desc">Coming soon</div>
+  <li>
+    <a href="phase1/01-completeness.html">1. Completeness of $\mathbb{R}$</a>
+    <div class="desc">The rationals have holes. The supremum axiom fills them. Why $\mathbb{R}$ exists and $\mathbb{Q}$ doesn't suffice.</div>
   </li>
-  <li style="opacity: 0.4;">
-    <span style="color: var(--accent);">2. The Squeeze Theorem</span>
-    <div class="desc">Coming soon</div>
+  <li>
+    <a href="phase1/02-squeeze-theorem.html">2. The Squeeze Theorem</a>
+    <div class="desc">Archimedes traps $\pi$ between polygons. If two sequences squeeze a third, it converges to their shared limit.</div>
   </li>
-  <li style="opacity: 0.4;">
-    <span style="color: var(--accent);">3. Monotone Convergence Theorem</span>
-    <div class="desc">Coming soon</div>
+  <li>
+    <a href="phase1/03-monotone-convergence.html">3. Monotone Convergence Theorem</a>
+    <div class="desc">The Babylonian method for $\sqrt{2}$. A bounded, monotone sequence must converge &mdash; completeness in action.</div>
   </li>
-  <li style="opacity: 0.4;">
-    <span style="color: var(--accent);">4. Bolzano-Weierstrass Theorem</span>
-    <div class="desc">Coming soon</div>
+  <li>
+    <a href="phase1/04-bolzano-weierstrass.html">4. Bolzano&ndash;Weierstrass Theorem</a>
+    <div class="desc">Every bounded sequence hides a convergent subsequence. The bisection argument.</div>
   </li>
-  <li style="opacity: 0.4;">
-    <span style="color: var(--accent);">5. Cauchy Criterion</span>
-    <div class="desc">Coming soon</div>
+  <li>
+    <a href="phase1/05-cauchy-criterion.html">5. The Cauchy Criterion</a>
+    <div class="desc">Convergence without knowing the limit. Terms getting closer to each other &mdash; the internal test.</div>
+  </li>
+  <li>
+    <a href="phase1/06-ivt.html">6. Intermediate Value Theorem</a>
+    <div class="desc">A continuous function that's negative then positive must cross zero. Continuity defined, bisection proof.</div>
+  </li>
+  <li>
+    <a href="phase1/07-dense-subsets.html">7. Dense Subsets of $\mathbb{R}$</a>
+    <div class="desc">$\mathbb{Q}$ is everywhere dense yet full of holes. Phase 1 recap: the architecture of the real line.</div>
   </li>
 </ul>
 
