feat: Phase 2 — Calculus (9 pages) + CLAUDE.md agent guide

--- a/index.html
+++ b/index.html
@@ -92,8 +92,52 @@
 
 <hr>
 
+<p class="phase-label">Phase 2 &mdash; Calculus: Derivatives and Integration</p>
+<p><em>Fermat wanted to find where a curve peaks. Newton and Leibniz wanted to compute areas under curves. The derivative and the integral &mdash; two seemingly unrelated ideas &mdash; turn out to be inverse operations. Built from scratch, every rule proved.</em></p>
+
+<ul class="index-list">
+  <li>
+    <a href="phase2/01-derivative.html">1. The Derivative</a>
+    <div class="desc">Fermat's tangent problem. The slope of a curve at a point, defined as the limit of secant slopes. Power rule proved.</div>
+  </li>
+  <li>
+    <a href="phase2/02-differentiation-rules.html">2. Differentiation Rules</a>
+    <div class="desc">Sum, product, quotient, chain rule &mdash; each proved from the limit definition. No memorisation without proof.</div>
+  </li>
+  <li>
+    <a href="phase2/03-trig-derivatives.html">3. Derivatives of Sine and Cosine</a>
+    <div class="desc">The geometric squeeze: $\sin(h)/h \to 1$. Then $d/dx \sin x = \cos x$ from the definition. Phase 0 meets Phase 1.</div>
+  </li>
+  <li>
+    <a href="phase2/04-mean-value-theorem.html">4. The Mean Value Theorem</a>
+    <div class="desc">If you drove 200 km in 2 hours, your speed was exactly 100 km/h at some instant. Local &rarr; global.</div>
+  </li>
+  <li>
+    <a href="phase2/05-lhopital.html">5. L'H&ocirc;pital's Rule</a>
+    <div class="desc">When $0/0$ blocks you, compare rates of vanishing. Proved from Cauchy's generalised MVT.</div>
+  </li>
+  <li>
+    <a href="phase2/06-riemann-integral.html">6. The Riemann Integral</a>
+    <div class="desc">Archimedes' area problem formalised. Partitions, upper and lower sums, the definition from scratch.</div>
+  </li>
+  <li>
+    <a href="phase2/07-integrability.html">7. Integrability and Properties</a>
+    <div class="desc">Continuous on a closed interval means integrable. Uniform continuity, linearity, monotonicity of the integral.</div>
+  </li>
+  <li>
+    <a href="phase2/08-fundamental-theorem.html">8. The Fundamental Theorem of Calculus</a>
+    <div class="desc">The central result. Differentiation and integration are inverse operations. Both parts proved.</div>
+  </li>
+  <li>
+    <a href="phase2/09-integration-techniques.html">9. Integration Techniques</a>
+    <div class="desc">Substitution = chain rule backwards. Integration by parts = product rule backwards. Phase 2 recap.</div>
+  </li>
+</ul>
+
+<hr>
+
 <p style="color: var(--dim); font-size: 0.85rem; text-align: center; margin-top: 2rem;">
-  Phases 2&ndash;13 &mdash; coming as you progress.
+  Phases 3&ndash;13 &mdash; coming as you progress.
 </p>
 
 </body>
