feat: insert number theory as Phase 1, renumber all phases + add game theory bonus

--- a/index.html
+++ b/index.html
@@ -56,88 +56,97 @@
 
 <hr>
 
-<p class="phase-label">Phase 1 &mdash; The Infinite: Limits and Basic Convergence</p>
+<p class="phase-label">Phase 1 &mdash; Number Theory and Arithmetic</p>
+<p><em>The Pythagoreans worshipped whole numbers. They discovered primes, divisibility, and the structure hidden in the integers. The oldest mathematics &mdash; counting, dividing, and the atoms of arithmetic.</em></p>
+
+<p style="color: var(--dim); font-size: 0.85rem; font-style: italic; margin-left: 1rem;">
+  Pages coming soon.
+</p>
+
+<hr>
+
+<p class="phase-label">Phase 2 &mdash; The Infinite: Limits and Basic Convergence</p>
 <p><em>Archimedes wanted to compute the area of a circle. He trapped it between polygons with more and more sides. The area is what the polygon areas "approach." But what does "approach" mean, precisely?</em></p>
 
 <ul class="index-list">
   <li>
-    <a href="phase1/01-completeness.html">1. Completeness of $\mathbb{R}$</a>
+    <a href="phase2/01-completeness.html">1. Completeness of $\mathbb{R}$</a>
     <div class="desc">The rationals have holes. The supremum axiom fills them. Why $\mathbb{R}$ exists and $\mathbb{Q}$ doesn't suffice.</div>
   </li>
   <li>
-    <a href="phase1/02-squeeze-theorem.html">2. The Squeeze Theorem</a>
+    <a href="phase2/02-squeeze-theorem.html">2. The Squeeze Theorem</a>
     <div class="desc">Archimedes traps $\pi$ between polygons. If two sequences squeeze a third, it converges to their shared limit.</div>
   </li>
   <li>
-    <a href="phase1/03-monotone-convergence.html">3. Monotone Convergence Theorem</a>
+    <a href="phase2/03-monotone-convergence.html">3. Monotone Convergence Theorem</a>
     <div class="desc">The Babylonian method for $\sqrt{2}$. A bounded, monotone sequence must converge &mdash; completeness in action.</div>
   </li>
   <li>
-    <a href="phase1/04-bolzano-weierstrass.html">4. Bolzano&ndash;Weierstrass Theorem</a>
+    <a href="phase2/04-bolzano-weierstrass.html">4. Bolzano&ndash;Weierstrass Theorem</a>
     <div class="desc">Every bounded sequence hides a convergent subsequence. The bisection argument.</div>
   </li>
   <li>
-    <a href="phase1/05-cauchy-criterion.html">5. The Cauchy Criterion</a>
+    <a href="phase2/05-cauchy-criterion.html">5. The Cauchy Criterion</a>
     <div class="desc">Convergence without knowing the limit. Terms getting closer to each other &mdash; the internal test.</div>
   </li>
   <li>
-    <a href="phase1/06-ivt.html">6. Intermediate Value Theorem</a>
+    <a href="phase2/06-ivt.html">6. Intermediate Value Theorem</a>
     <div class="desc">A continuous function that's negative then positive must cross zero. Continuity defined, bisection proof.</div>
   </li>
   <li>
-    <a href="phase1/07-dense-subsets.html">7. Dense Subsets of $\mathbb{R}$</a>
-    <div class="desc">$\mathbb{Q}$ is everywhere dense yet full of holes. Phase 1 recap: the architecture of the real line.</div>
+    <a href="phase2/07-dense-subsets.html">7. Dense Subsets of $\mathbb{R}$</a>
+    <div class="desc">$\mathbb{Q}$ is everywhere dense yet full of holes. Phase 2 recap: the architecture of the real line.</div>
   </li>
 </ul>
 
 <hr>
 
-<p class="phase-label">Phase 2 &mdash; Calculus: Derivatives and Integration</p>
+<p class="phase-label">Phase 3 &mdash; Calculus: Derivatives and Integration</p>
 <p><em>Fermat wanted to find where a curve peaks. Newton and Leibniz wanted to compute areas under curves. The derivative and the integral &mdash; two seemingly unrelated ideas &mdash; turn out to be inverse operations. Built from scratch, every rule proved.</em></p>
 
 <ul class="index-list">
   <li>
-    <a href="phase2/01-derivative.html">1. The Derivative</a>
+    <a href="phase3/01-derivative.html">1. The Derivative</a>
     <div class="desc">Fermat's tangent problem. The slope of a curve at a point, defined as the limit of secant slopes. Power rule proved.</div>
   </li>
   <li>
-    <a href="phase2/02-differentiation-rules.html">2. Differentiation Rules</a>
+    <a href="phase3/02-differentiation-rules.html">2. Differentiation Rules</a>
     <div class="desc">Sum, product, quotient, chain rule &mdash; each proved from the limit definition. No memorisation without proof.</div>
   </li>
   <li>
-    <a href="phase2/03-trig-derivatives.html">3. Derivatives of Sine and Cosine</a>
-    <div class="desc">The geometric squeeze: $\sin(h)/h \to 1$. Then $d/dx \sin x = \cos x$ from the definition. Phase 0 meets Phase 1.</div>
+    <a href="phase3/03-trig-derivatives.html">3. Derivatives of Sine and Cosine</a>
+    <div class="desc">The geometric squeeze: $\sin(h)/h \to 1$. Then $d/dx \sin x = \cos x$ from the definition. Phase 0 meets Phase 2.</div>
   </li>
   <li>
-    <a href="phase2/04-mean-value-theorem.html">4. The Mean Value Theorem</a>
+    <a href="phase3/04-mean-value-theorem.html">4. The Mean Value Theorem</a>
     <div class="desc">If you drove 200 km in 2 hours, your speed was exactly 100 km/h at some instant. Local &rarr; global.</div>
   </li>
   <li>
-    <a href="phase2/05-lhopital.html">5. L'H&ocirc;pital's Rule</a>
+    <a href="phase3/05-lhopital.html">5. L'H&ocirc;pital's Rule</a>
     <div class="desc">When $0/0$ blocks you, compare rates of vanishing. Proved from Cauchy's generalised MVT.</div>
   </li>
   <li>
-    <a href="phase2/06-riemann-integral.html">6. The Riemann Integral</a>
+    <a href="phase3/06-riemann-integral.html">6. The Riemann Integral</a>
     <div class="desc">Archimedes' area problem formalised. Partitions, upper and lower sums, the definition from scratch.</div>
   </li>
   <li>
-    <a href="phase2/07-integrability.html">7. Integrability and Properties</a>
+    <a href="phase3/07-integrability.html">7. Integrability and Properties</a>
     <div class="desc">Continuous on a closed interval means integrable. Uniform continuity, linearity, monotonicity of the integral.</div>
   </li>
   <li>
-    <a href="phase2/08-fundamental-theorem.html">8. The Fundamental Theorem of Calculus</a>
+    <a href="phase3/08-fundamental-theorem.html">8. The Fundamental Theorem of Calculus</a>
     <div class="desc">The central result. Differentiation and integration are inverse operations. Both parts proved.</div>
   </li>
   <li>
-    <a href="phase2/09-integration-techniques.html">9. Integration Techniques</a>
-    <div class="desc">Substitution = chain rule backwards. Integration by parts = product rule backwards. Phase 2 recap.</div>
+    <a href="phase3/09-integration-techniques.html">9. Integration Techniques</a>
+    <div class="desc">Substitution = chain rule backwards. Integration by parts = product rule backwards. Phase 3 recap.</div>
   </li>
 </ul>
 
 <hr>
 
 <p style="color: var(--dim); font-size: 0.85rem; text-align: center; margin-top: 2rem;">
-  Phases 3&ndash;13 &mdash; coming as you progress.
+  Phases 4&ndash;15 &mdash; coming as you progress.
 </p>
 
 </body>
