--- a/phase0/06-coordinate-geometry.html
+++ b/phase0/06-coordinate-geometry.html
@@ -260,10 +260,10 @@
 <ul>
   <li>
     <strong>Functions become curves.</strong> A function $f(x)$ is a rule; its graph $y = f(x)$ is
-    a curve in the coordinate plane. When we study functions in Phase 1, we will be studying curves.
+    a curve in the coordinate plane. When we study functions in Phase 2, we will be studying curves.
   </li>
   <li>
-    <strong>Derivatives become slopes.</strong> The derivative (Phase 2) is the slope of the tangent
+    <strong>Derivatives become slopes.</strong> The derivative (Phase 3) is the slope of the tangent
     line to a curve at a point &mdash; a geometric concept, expressed algebraically, computed by
     a limit. All three ideas (geometry, algebra, limits) meeting at one point on Descartes' plane.
   </li>
@@ -334,9 +334,9 @@
 </p>
 
 <p>
-  <strong>Next: Phase 1 &mdash; Limits and Convergence.</strong> The concept that turned vague
-  intuitions about "approaching" into precise, provable mathematics &mdash; and made calculus
-  rigorous.
+  <strong>Next: Phase 1 &mdash; Number Theory.</strong> Before chasing infinity, the ancients
+  counted, factored, and discovered primes. The arithmetic of whole numbers &mdash; then on to
+  Phase 2, limits and convergence.
 </p>
 
 <!-- ─── 12. ONE-LINER ──────────────────────────────── -->
