--- a/phase2/07-dense-subsets.html
+++ b/phase2/07-dense-subsets.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dense Subsets — Phase 1</title>
+<title>Dense Subsets — Phase 2</title>
 <link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
@@ -18,7 +18,7 @@
 <body>
 
 <h1>Dense Subsets</h1>
-<p class="subtitle">$\mathbb{Q}$ is Everywhere and Nowhere — Phase 1, Page 7</p>
+<p class="subtitle">$\mathbb{Q}$ is Everywhere and Nowhere — Phase 2, Page 7</p>
 
 <!-- ─── 1. THE PROBLEM ─────────────────────────────── -->
 
@@ -27,7 +27,7 @@
 <div class="problem-box">
   <div class="label">The problem</div>
   <p>
-    Over the course of Phase 0 and Phase 1, we've built a paradox.
+    Over the course of Phase 0 and Phase 2, we've built a paradox.
   </p>
   <p>
     On one hand (page 03 of Phase 0): $\mathbb{Q}$ has holes. $\sqrt{2}$ is missing,
@@ -265,7 +265,7 @@
 
 <!-- ─── 11. PHASE 1 RECAP ──────────────────────────── -->
 
-<h2>Phase 1 complete &mdash; what you now have</h2>
+<h2>Phase 2 complete &mdash; what you now have</h2>
 
 <ul>
   <li><strong>Completeness</strong>: $\mathbb{R}$ has no holes (page 01)</li>
@@ -284,7 +284,7 @@
 </p>
 
 <p>
-  <strong>Next: Phase 2 &mdash; Derivatives.</strong>
+  <strong>Next: Phase 3 &mdash; Calculus.</strong>
 </p>
 
 <!-- ─── 12. WHAT BREAKS ────────────────────────────── -->
