feat: Phase 1 — Number Theory and Arithmetic (7 pages)

--- a/index.html
+++ b/index.html
@@ -59,9 +59,36 @@
 <p class="phase-label">Phase 1 &mdash; Number Theory and Arithmetic</p>
 <p><em>The Pythagoreans worshipped whole numbers. They discovered primes, divisibility, and the structure hidden in the integers. The oldest mathematics &mdash; counting, dividing, and the atoms of arithmetic.</em></p>
 
-<p style="color: var(--dim); font-size: 0.85rem; font-style: italic; margin-left: 1rem;">
-  Pages coming soon.
-</p>
+<ul class="index-list">
+  <li>
+    <a href="phase1/01-divisibility.html">1. Divisibility and the Euclidean Algorithm</a>
+    <div class="desc">Euclid needs the largest common measure of two lengths. The division algorithm, GCD, B&eacute;zout's identity, and the LCM.</div>
+  </li>
+  <li>
+    <a href="phase1/02-primes.html">2. Prime Numbers and the Fundamental Theorem</a>
+    <div class="desc">The atoms of arithmetic. Sieve of Eratosthenes, Euclid's lemma, infinitely many primes, unique factorisation.</div>
+  </li>
+  <li>
+    <a href="phase1/03-modular-arithmetic.html">3. Modular Arithmetic</a>
+    <div class="desc">Clock arithmetic made rigorous. Congruence, residue classes, inverses via B&eacute;zout, $\mathbb{Z}/p\mathbb{Z}$ as a field.</div>
+  </li>
+  <li>
+    <a href="phase1/04-fermat-little.html">4. Fermat's Little Theorem</a>
+    <div class="desc">A pattern in powers mod $p$. The permutation proof, fast exponentiation, and the trap of Carmichael numbers.</div>
+  </li>
+  <li>
+    <a href="phase1/05-euler-totient.html">5. Euler's Totient Function</a>
+    <div class="desc">Counting invertible residues. $\varphi(n)$, the prime power formula, Euler's theorem generalising Fermat, and a glimpse of RSA.</div>
+  </li>
+  <li>
+    <a href="phase1/06-crt.html">6. The Chinese Remainder Theorem</a>
+    <div class="desc">Sun Tzu's counting puzzle. Simultaneous congruences, constructive proof, and the payback &mdash; $\varphi$ is multiplicative.</div>
+  </li>
+  <li>
+    <a href="phase1/07-diophantine.html">7. Diophantine Equations</a>
+    <div class="desc">Integer solutions only. Linear Diophantine equations, existence via GCD, all solutions parametrised. Pythagorean triples. Phase 1 recap.</div>
+  </li>
+</ul>
 
 <hr>
 
