feat: Phase 4 — Power Series and Taylor (6 pages)

--- a/index.html
+++ b/index.html
@@ -172,8 +172,40 @@
 
 <hr>
 
+<p class="phase-label">Phase 4 &mdash; Infinite Polynomials: Power Series and Taylor</p>
+<p><em>Newton had a radical insight: write complicated functions as infinite polynomials, then just do polynomial arithmetic. Taylor systematised this &mdash; if you know all the derivatives at one point, you can reconstruct the entire function. Here we define $e^x$, $\sin$, $\cos$, and $\ln$ from scratch.</em></p>
+
+<ul class="index-list">
+  <li>
+    <a href="phase4/01-taylor-theorem.html">1. Taylor's Theorem</a>
+    <div class="desc">Newton's infinite-polynomial idea. Matching derivatives to find coefficients. The Lagrange remainder bounds the error.</div>
+  </li>
+  <li>
+    <a href="phase4/02-power-series.html">2. Power Series and Radius of Convergence</a>
+    <div class="desc">A disc of convergence for every power series. Ratio test, Cauchy-Hadamard. Why $1/(1+x^2)$ has radius $1$ despite being smooth everywhere.</div>
+  </li>
+  <li>
+    <a href="phase4/03-exponential.html">3. The Exponential Function</a>
+    <div class="desc">$e^x = \sum x^n/n!$ &mdash; defined by the series, all properties proved. The number $e$, the natural logarithm, and the IOU from Phase 3 closed.</div>
+  </li>
+  <li>
+    <a href="phase4/04-trig-series.html">4. Sine and Cosine from Scratch</a>
+    <div class="desc">Trig functions from pure arithmetic. $\sin^2 + \cos^2 = 1$ proved algebraically. $|\sin x| \leq 1$ proved. IOUs from Phases 0 and 2 closed.</div>
+  </li>
+  <li>
+    <a href="phase4/05-term-by-term.html">5. Term-by-Term Operations</a>
+    <div class="desc">Differentiating and integrating power series term by term &mdash; when and why it works. Series for $\ln(1+x)$ and $\arctan(x)$ derived.</div>
+  </li>
+  <li>
+    <a href="phase4/06-abel-theorem.html">6. Abel's Theorem</a>
+    <div class="desc">Boundary behaviour of power series. $\ln(2) = 1 - 1/2 + 1/3 - \cdots$ and $\pi/4 = 1 - 1/3 + 1/5 - \cdots$. Phase 4 recap.</div>
+  </li>
+</ul>
+
+<hr>
+
 <p style="color: var(--dim); font-size: 0.85rem; text-align: center; margin-top: 2rem;">
-  Phases 4&ndash;15 &mdash; coming as you progress.
+  Phases 5&ndash;15 &mdash; coming as you progress.
 </p>
 
 </body>
