--- a/phase3/09-integration-techniques.html
+++ b/phase3/09-integration-techniques.html
@@ -351,7 +351,7 @@
 
 <div class="nav">
   <a href="08-fundamental-theorem.html">&larr; Previous: The Fundamental Theorem of Calculus</a>
-  <a href="../index.html">Back to Index &rarr;</a>
+  <a href="../phase4/01-taylor-theorem.html">Next: Taylor's Theorem &rarr;</a>
 </div>
 
 </body>
